force-app/main/default/objects/Email_Template_Catalog__mdt/Email_Template_Catalog__mdt.object-meta.xml
<CustomObject>
    <label>Email Template Catalog</label>
    <pluralLabel>Email Template Catalogs</pluralLabel>
</CustomObject>