force-app/main/default/objects/Email_Template_Catalog__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the template is currently in use</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>