force-app/main/default/objects/Email_Template_Catalog__mdt/fields/Communication_Type__c.field-meta.xml
<CustomField>
    <fullName>Communication_Type__c</fullName>
    <description>Used to filter templates by type</description>
    <label>Communication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welcome</fullName>
                <default>true</default>
                <label>Welcome</label>
            </value>
            <value>
                <fullName>Reminder</fullName>
            </value>
            <value>
                <fullName>Completion</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>