force-app/main/default/objects/Email_Template_Catalog__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Admin notes for reference</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>