force-app/main/default/objects/Email_Template_Catalog__mdt/fields/Onboarding_Type__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Type__c</fullName>
    <description>Used to filter templates by onboarding type</description>
    <label>Onboarding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program Dealer</fullName>
                <default>true</default>
                <label>Program Dealer</label>
            </value>
            <value>
                <fullName>Infrastructure Dealer</fullName>
            </value>
            <value>
                <fullName>Vendor Onboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>